--- a/src/features/domain-catcher/ui/intro-content.module.scss
+++ b/src/features/domain-catcher/ui/intro-content.module.scss
@@ -28,6 +28,7 @@
   gap: 4px;
   padding-left: 20px;
   margin: 0;
+  list-style: disc;
 
   li {
     font-size: 13px;
