--- a/src/features/password-shield/ui/password-shield.module.scss
+++ b/src/features/password-shield/ui/password-shield.module.scss
@@ -14,7 +14,7 @@
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: var(--spacing-xl);
+  gap: var(--spacing-m);
 }
 
 .pageHeader {
